# rsp-streaming

./: README.txt  rspKeyGen.txt  rsp_spec.txt
gst-template/gst-app/: Makefile  configure.ac  configure.lineno
gst-template/gst-app/src/: .directory  Makefile  Makefile.am  cJSON.c  cJSON.h  gst_rspplayer  gstrspsrc.c  gstrspsrc.h  main.c  rs.c  rs.h  rsp.c  rsp.h
gst-template/gst-app/src/.deps/: gst_app-main.Po  gst_app-play.Po  gst_rspplayer-cJSON.Po  gst_rspplayer-gstrspsrc.Po  gst_rspplayer-main.Po  gst_rspplayer-rs.Po  gst_rspplayer-rsp.Po
gst-template/gst-plugin/: .directory  Makefile  configure.ac  configure.lineno
gst-template/gst-plugin/src/: .directory  Makefile  Makefile.am  gstrspsink.c  gstrspsink.h  gstrspsrc.c  libgstrspsrc.la  libgstrspsrc_la-cJSON.lo  libgstrspsrc_la-gstrspsrc.lo  libgstrspsrc_la-rs.lo  libgstrspsrc_la-rsp.lo  rsp.c  rsp.h
gst-template/gst-plugin/src/.deps/: libgstrspsrc_la-cJSON.Plo  libgstrspsrc_la-gstrspsrc.Plo  libgstrspsrc_la-rs.Plo  libgstrspsrc_la-rsp.Plo
gst-template/gst-plugin/src/.libs/: libgstrspsrc.exp  libgstrspsrc.la  libgstrspsrc.lai  libgstrspsrc.ver
rsp-libaray/: rsp.c
rspServer/: Makefile  README.txt  main.c  rsp.c  rspServer  simple_make
rspServer/example_config/: config.json  main_source.rsp  recode_source.rsp
